@@ -1,3 +1,10 @@
+2004-01-05  Chris Schwerdt    <muti@afterglo.ws> 1.4.2-cvs-b68
+	* Added ability for gallery remote to fetch images remotely
+	  into an album.
+
+	* Enabled output buffering in gallery remote so that error and
+	  status messages get removed before outputing command results.
+
 2004-01-05  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.2-cvs-b67
 
 	* Fixed security weakness in login code that could allow snooping for
